# FlightSimControllerPC

./: CMakeLists.txt  FlightSim.qmlproject  FlightSim.qmlproject.qtds  qds.cmake
App/: ConnectionStatus.h  FlightControlData.h  FlightControlDataManager.cpp  FlightControlDataManager.h  FlightData.h  HIDInputHandler.cpp  HIDInputHandler.h  SimConnectController.cpp  SimConnectController.h  hidworker.cpp  hidworker.h  main.cpp  trim.cpp  trim.h
App/autogen/: environment.h
FlightSim/: CMakeLists.txt  Constants.qml  qmldir
FlightSim/designer/: plugin.metainfo
FlightSimContent/: App.qml  App.qml.fHEWfv  CMakeLists.txt  Screen01.qml  Screen01.ui.qml.UiyqCg
